--- a/AndroidProjects/app/src/main/AndroidManifest.xml
+++ b/AndroidProjects/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".PresentadorIdeas2"/>
+        <activity android:name=".CrearTema"/>
         <activity android:name=".Registro"/>
         <activity android:name=".links"/>
         <activity android:name=".PresentadorProblematica"/>
