--- a/AndroidProjects/app/local.properties
+++ b/AndroidProjects/app/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 11 10:14:49 EDT 2020
-sdk.dir = /home/bortackar/Android/Sdk
+#Thu Jun 11 10:37:56 EDT 2020
+sdk.dir=/home/bortackar/Android/Sdk
